# edgar_db

./: .gitignore  README.md  pyproject.toml
examples/: collect_reports.py
src/edgar_db/: __init__.py  build_orm.py  bulk_insert.py  collect_edgar.py  edgar_parser.py  logger.py  orm_db.py  orm_parser.py  parser.py  upload.py  urls.py  write.py
tests/: db_settings.py  sample_files.py  settings.cfg  test_build_orm.py  test_urls.py
