[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'edgar_db'
authors = [{name = 'Sam Thelwall', email = 'samuel.thelwall@fideres.com'}]
description = 'Upload SEC 13-F files to searchable SQLAlchemy ORM database'
dependencies = [
  'sqlalchemy >= 2.0',
  'psycopg2'
]
version = '0.1'


[project.optional-dependencies]
test = ['pytest', 'isort', 'black', 'mypy']


